[tool.poetry]
name = "pandoc-entangled"
version = "0.9.0"
description = "Set of filters for rendering Entangled projects with Pandoc"
authors = ["Johan Hidding <j.hidding@esciencecenter.nl>"]
license = "Apache 2"
readme = "README.md"
packages = [{include = "pandoc_entangled"}]

[tool.poetry.dependencies]
python = "^3.8"
panflute = "^2.3.0"
jupyter-client = "^8.2.0"
ansi2html = "^1.8.0"
pampy = "^0.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-mypy = "^0.10.3"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pandoc-tangle = "pandoc_entangled.tangle:main"
pandoc-doctest = "pandoc_entangled.doctest_main:main"
pandoc-bootstrap = "pandoc_entangled.bootstrap:main"
pandoc-annotate-codeblocks = "pandoc_entangled.annotate:main"
pandoc-inject = "pandoc_entangled.inject:main"
